syntax = "proto3";


service GameService {
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse);
}



message HelloWorldRequest {
    string name = 1;
}

message HelloWorldResponse {
    string message = 2;
}